adding initial modal script and related css and template files.

--- a/src/assets/scss/legacy.scss
+++ b/src/assets/scss/legacy.scss
@@ -1,3 +1,3 @@
 /* ---------------------------------------------------------------------
- Legacy Styles
+ Legacy Styles: lte IE8
 ------------------------------------------------------------------------ */
