--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -1,9 +1,16 @@
-<div id="modal" class="modal js-modal-target" data-modal-trigger="myModal" role="dialog" aria-labeledby="modal-headline" aria-describedby="modal-content" tabindex="0">
+<div id="myModal"
+    class="modal js-modal-target"
+    role="dialog"
+    aria-labeledby="modal-headline"
+    aria-describedby="modal-content"
+    tabindex="0">
+
     <div class="modal-wrapper js-modal-wrapper">
         <div class="modal-wrapper-content">
-            <h1 class="hdg hdg_1" id="modal-headline">Title</h1>
-            <a href="#" class="btn js-modal-close" data-modal-target="myModal">Close</a>
+            <a href="#" class="js-modal-close" data-modal-target="myModal">Close</a>
+            <h2 id="modal-headline">Title</h2>
             <div id="modal-content">This is the modal content.</div>
         </div>
     </div>
+
 </div>
