--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -1,5 +1,5 @@
 <div id="myModal"
-    class="modal js-modal-target"
+    class="modal isVisuallyHidden js-modal-target"
     role="dialog"
     aria-labeledby="modal-headline"
     aria-describedby="modal-content"
@@ -7,9 +7,9 @@
 
     <div class="modal-wrapper js-modal-wrapper">
         <div class="modal-wrapper-content">
-            <a href="#" class="js-modal-close" data-modal-target="myModal">Close</a>
+            <button class="modal-wrapper-content-close js-modal-close" type="button" data-modal-target="myModal">Close</button>
             <h2 id="modal-headline">Title</h2>
-            <div id="modal-content">This is the modal content.</div>
+            <div id="modal-content">Put modal content here.</div>
         </div>
     </div>
 
