--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -3,6 +3,7 @@
     role="dialog"
     aria-labeledby="modal-headline"
     aria-describedby="modal-content"
+    aria-live="off"
     tabindex="0">
 
     <div class="modal-wrapper js-modal-wrapper">
