finished version 1.0.0 of the skeleton modalview. added auto measure and position funcitons, finalized no-js vs. js handling of the modal content. cleaned up documentation and dependent css

--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -8,6 +8,13 @@
 
     <!-- SEO -->
     <title>Require UI Views</title>
+    <!-- JS ENABLED -->
+    <script>
+        (function(){
+            'use strict';
+            document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
+        }());
+    </script>
 
     <!-- ICONS -->
     <link rel="shortcut icon" type="image/ico" href="assets/media/images/favicon.ico" />
@@ -19,5 +26,4 @@
     <![endif]-->
 </head>
 <body>
-
     <h1>Require UI Views</h1>
