--- a/src/templates/partials/_modal.html
+++ b/src/templates/partials/_modal.html
@@ -1,5 +1,5 @@
 <div id="myModal"
-    class="modal isVisuallyHidden js-modal-target"
+    class="modal js-modal-target"
     role="dialog"
     aria-labeledby="modal-headline"
     aria-describedby="modal-content"
@@ -10,7 +10,7 @@
         <div class="modal-wrapper-content">
             <button class="modal-wrapper-content-close js-modal-close" type="button" data-modal-target="myModal">Close</button>
             <h2 id="modal-headline">Title</h2>
-            <div id="modal-content">Put modal content here.</div>
+            <div id="modal-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod optio deleniti reiciendis modi praesentium nihil iusto qui eligendi fugit necessitatibus nam hic et unde officia vel, dolorum, voluptate. Amet, molestiae?</div>
         </div>
     </div>
 
