commenting script tag in header

--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -8,7 +8,11 @@
 
     <!-- SEO -->
     <title>Require UI Views</title>
-    <!-- JS ENABLED -->
+
+    <!-- JS ENABLED.
+        This is an attempt to toggle these classes asap during page load.
+        There may be a better way to do this.
+    -->
     <script>
         (function(){
             'use strict';
