Adding comment to update class names in the css files

--- a/src/assets/scss/modules/container/modal/_modal.scss
+++ b/src/assets/scss/modules/container/modal/_modal.scss
@@ -8,7 +8,7 @@
  *
  * The following CSS is a starting point. This modal is largely un-styled
  * and will require additional styling to fit your project needs.
- * Update the variables below to fit your project
+ * Update the variables and class names below to fit your project
 ------------------------------------------------------------------------ */
 $modal-TRANSITION: 0.4s ease opacity;
 $sneezeguard-ZINDEX: 900;
